{
    "name": "Input",
    "maps": [
        {
            "name": "Gameplay",
            "id": "a5b46b2f-670e-4487-8d21-2d11260e2691",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "463a00af-cfa1-4949-b8d6-969cd6d17f6f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "07e88862-fb53-49db-976b-a51ac5ee9311",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "1a5914dc-29a7-4311-8f11-fd0c24c4fb8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill",
                    "type": "Button",
                    "id": "652c52f7-3eef-40a7-8bb0-cd4443745c6c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "799a2927-aac4-429d-9418-6a834ab0383c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "8ef006ab-a6aa-4d2c-88c3-f5ebf5087b10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FirstLegacySkill",
                    "type": "Button",
                    "id": "27958472-8dde-449d-86c3-c44fbab5a1e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondLegacySkill",
                    "type": "Button",
                    "id": "0a06fc02-5015-488e-80ac-5f48a56f6381",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Heal",
                    "type": "Button",
                    "id": "88a53b87-c015-44e1-b536-b8ad12ad3261",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Direction",
                    "id": "1999cdc7-4d92-4fef-9e72-7d6e4bd9e02f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "083b9b41-ff79-47ce-878d-5460b057a486",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c060d2f5-b84e-4c9d-9447-839b462987f4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ed4e09ce-d823-433a-8f81-79eba3ee83d2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "293de7f8-2000-4d2a-a340-849e93cb7429",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "35fa8cef-8efa-49e3-8bbf-d2c5d89fd221",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7acb818-c4fe-4818-8f16-3c456b621a4a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b524025-88e6-401f-a8e0-bf05ef5556fa",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9e60d30-4d0c-4ac8-8c9e-1bb46ead8282",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82fe78a1-1f56-4221-8264-e542abf57674",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "187aa843-9458-4e76-81c6-80fb22dba9d7",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstLegacySkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40e9b525-6de0-4daa-98d7-b7566849f31d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondLegacySkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a70c028d-3c89-4f3d-b81e-b68cb51289e2",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Heal",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "47a2cb44-f9c5-4501-85dc-b9eaa853a8a1",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "d49e66eb-4291-4ef7-81f2-58cc3dbb0c32",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "87554ec4-d7e6-47a0-9f2a-74f72370bc7b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "f434d374-878c-44ff-9462-159c1838ee94",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "83f0dbc4-af66-4fe1-a941-6a58edfe0abf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "03e602a3-8bfe-45ff-b8f1-a624d0ad11e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "1b885028-9f7d-4d46-8277-c4da767c2e22",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "04c6517b-43a3-4898-b9c5-4ffec70c84c9",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5ecf98d-b734-480b-ba86-c253003d0449",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f17f9458-4bf5-4d4a-9788-1e22c2d9cc5a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c991aaf8-c6a5-48bf-9e9f-9f457022b635",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3995fe66-1065-4de8-b531-df9da7344ed9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f519e265-0b0f-48d0-abad-42774359db21",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd5d39d5-ced0-4120-8946-60053a0004e8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e989ca87-a5bd-4e0d-af37-6ad5d84da157",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "867f08d5-59b7-4012-b283-1f0cbf8bb27c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd710b86-d7e6-44d8-900d-b0c5fe8a2be8",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "07a6119a-61c2-4d0c-a2ed-c2f5f90e6502",
            "actions": [
                {
                    "name": "SetDebugModifier",
                    "type": "Button",
                    "id": "10b1fd06-2486-4159-85c2-d52cdefd2f8f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DamageHero",
                    "type": "Button",
                    "id": "01add67c-a7ab-4fed-b902-3e5e2bf785f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ef2ee727-a9b7-4e21-851a-73162f08f9b2",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetDebugModifier",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40e6fbfa-aee4-4b20-87c5-10ed4b53d3b8",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DamageHero",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}